src/sass/_gamesurface.scss
#gamesurface {
  width: 100%;
  background: green;
}

svg#the-zone {
  box-sizing: content-box;
  width: 600px;
  height: 600px;
  padding: 20px;
  margin: 0 auto;
  display: block;
  position: relative;

  stroke: white;
  stroke-width: 2;
  fill: transparent;
}

